Modified the SearchQuery to use keyword lists for product and substance names